fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@ body {
   
   .container {
     text-align: center;
+    overflow-y: hidden;
+    overflow-x: hidden;
   }
   
   h1 {
